<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".list.ListFragment">

    <EditText
        android:id="@+id/zip_edit_text"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_button"
        android:autofillHints="postalCode"
        android:hint="@string/list_zip_code_hint"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_search"
        app:layout_constraintStart_toEndOf="@id/zip_edit_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/zip_group"
        android:visibility="gone"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        app:constraint_referenced_ids="zip_edit_text, search_button" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/zip_barrier"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="zip_edit_text,search_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:visibility="gone"
        tools:listitem="@layout/item_business_card"
        android:layout_marginTop="@dimen/business_margin"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/zip_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/message_text"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        tools:text="@string/list_search_generic_error"
        android:visibility="gone"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginEnd="@dimen/large_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/zip_barrier"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/zip_barrier"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>